# beze-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  package-lock.json  package.json  pyproject.toml
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 0874b540258e_orders_update_26_02.py  0cffccec7d2d_create_refresh_tokens.py  23d44b8b8bcf_create_products.py  29d193bfacfa_changed_products_models_v7.py  41fe083d1fe1_change_products_and_categories_to_real_.py  45f94dab4932_ingredients_and_fillings_optional.py  489a895bb239_changed_products_models_v3.py  498f45cf76ae_create_users.py  54d1aa0d134d_create_categories_table.py  60f72152f768_orders_add.py  67d241aa18c9_changed_products_models.py  6e39c34be438_changed_products_models_v5.py  6f41fba94cbc_orders_add_v5.py  7433bd5c16cb_changed_nullable_keys.py  81a1052e8288_users_email_not_null.py  8e563171e35c_changed_products_models_v4.py  9811279323a5_planner_tasks_add.py  99975dc19b9f_email_login_v2.py  9ad37be5e776_orders_add_v6.py  a66fd6b3c12e_orders_add_v9.py  b463e630c707_add_password_reset_tokens2.py  b4a810889f34_change_products_price_type.py  bc9fcc6f5641_changed_products_models_v2.py  dbda2e81ca84_profile_add.py  e6341eb15a4d_add_cascade_delete_for_user_data.py  e9077b542043_create_products_v2.py  ebb9c8a93665_email_login.py  fc85ad68c05c_orders_add_v2.py
app/: main.py  settings.py
app/api/: deps.py
app/api/v1/: health.py  router.py
app/core/: email.py  schema_utils.py  security.py
app/database/: engine.py  session.py
local/: docker-compose.yml
(+36 files in other folders)
