[project]
name = "fastapi-starter"
version = "0.1.0"
description = "FastAPI with async postgres, alembic, uv, ruff and mypy"
requires-python = "==3.12"
dependencies = [
    "alembic>=1.17.1",
    "fastapi>=0.120.4",
    "pydantic-settings>=2.11.0",
    "sqlalchemy>=2.0.44",
    "sqlmodel>=0.0.27",
    "starlette>=0.49.3",
    "types-sqlalchemy>=1.4.53.38",
    "uvicorn>=0.38.0",
]

[tool.ruff]
line-length = 80
target-version = "py312"
lint.select = ["E", "F", "I", "N", "B"]
lint.ignore = ["E741"]
exclude = ["alembic", ".venv"]
preview = true

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
python_version = 3.12